Make the HTML greener.

--- a/src/index.html
+++ b/src/index.html
@@ -5,21 +5,24 @@
 		<link rel="stylesheet" href="css/icons.css">
 		<style>
 			body {
-				margin: 6rem 3rem;
+				margin: 3rem 1.5rem;
 				font: 'Helvetica', 'Segoe UI', Arial, sans-serif;
 				font-size: 16px;
+				text-align: center;
 			}
 			.button {
 				transition: background-color 0.25s;
 				margin-right: 0.5em;
 				margin-bottom: 0.5em;
 				border-radius: 3px;
+				border: solid 1px #009900;
 				padding: 0.5em 0.75em;
-				background-color: #3399CC;
+				background-color: #33AA00;
 				color: #FFF;
 			}
 			.button:hover {
-				background-color: #3366AA;
+				background-color: #66CC00;
+				border: solid 1px #33AA00;
 			}
 			.button:before {
 				margin-right: 0.25em;
@@ -31,7 +34,7 @@
 	</head>
 	<body>
 		<p>
-			<a href="#" class="icon-home-16 icon button">Go Home</a><!--
+			<a href="#" class="icon-home-16 icon button">Home</a><!--
 			--><a href="#" class="icon-menu-16 icon button">Menu</a><!--
 			--><a href="#" class="icon-add-16 icon button">Add</a><!--
 			--><a href="#" class="icon-remove-16 icon button">Remove</a><!--
@@ -41,7 +44,7 @@
 			--><a href="#" class="icon-check-16 icon button">Check</a>
 		</p>
 		<p>
-			<a href="#" class="icon-home-24 icon button button-large">Go Home</a><!--
+			<a href="#" class="icon-home-24 icon button button-large">Home</a><!--
 			--><a href="#" class="icon-menu-24 icon button button-large">Menu</a><!--
 			--><a href="#" class="icon-add-24 icon button button-large">Add</a><!--
 			--><a href="#" class="icon-remove-24 icon button button-large">Remove</a><!--
